testdata/parser/negative/31.txt
Parse error at 31.pdl:6:13: Illegal break: synchronous statement escape
            break; // not allowed
            ^
